# matrix-ctf-bot

./: Cargo.toml  config.toml
src/: config.rs  error.rs  lib.rs  matrix.rs  state.rs
