[package]
name = "matrix-ctf-bot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dirs = "4.0.0"
matrix-sdk = { version = "0.6.2", features = ["sled"] }
miette = { version = "5.5.0", features = ["fancy"] }
serde = { version = "1.0.148", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[[bin]]
name = "matrix-ctf-bot"
path = "src/bin/matrix-ctf-bot.rs"

[profile.release]
lto = "fat"
strip = "debuginfo"
panic = "abort"
opt-level = "z"
codegen-units = 1
